--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Platform</title>
+    <title>Education Meet</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -21,8 +21,8 @@
     </header>
     <main>
         <section class="hero">
-            <h1>Welcome to the Student Platform</h1>
-            <p>Connect with students from all over the world.</p>
+            <h1>Welcome to Education Meet</h1>
+            <p>Connecting students from all over the world.</p>
         </section>
         <section class="features">
             <div class="feature">
@@ -31,16 +31,16 @@
             </div>
             <div class="feature">
                 <h2>Events</h2>
-                <p>Stay updated with the latest events and activities.</p>
+                <p>Stay updated with the latest educational events and activities.</p>
             </div>
             <div class="feature">
                 <h2>Resources</h2>
-                <p>Access a variety of resources to help you in your studies.</p>
+                <p>Access a variety of resources to aid your learning journey.</p>
             </div>
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 Student Platform. All rights reserved.</p>
+        <p>&copy; 2025 Education Meet. All rights reserved.</p>
     </footer>
 </body>
 </html>
