--- a/resources.html
+++ b/resources.html
@@ -22,11 +22,11 @@
     <main>
         <section class="resources">
             <h1>Resources</h1>
-            <p>Access a variety of resources to help you in your studies.</p>
+            <p>Access a variety of resources to aid your learning journey.</p>
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 Student Platform. All rights reserved.</p>
+        <p>&copy; 2025 Education Meet. All rights reserved.</p>
     </footer>
 </body>
 </html>
