--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 Student Platform. All rights reserved.</p>
+        <p>&copy; 2025 Education Meet. All rights reserved.</p>
     </footer>
 </body>
 </html>
