--- a/events.html
+++ b/events.html
@@ -22,11 +22,11 @@
     <main>
         <section class="events">
             <h1>Events</h1>
-            <p>Stay updated with the latest events and activities.</p>
+            <p>Stay updated with the latest educational events and activities.</p>
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 Student Platform. All rights reserved.</p>
+        <p>&copy; 2025 Education Meet. All rights reserved.</p>
     </footer>
 </body>
 </html>
