--- a/forum.html
+++ b/forum.html
@@ -26,7 +26,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 Student Platform. All rights reserved.</p>
+        <p>&copy; 2025 Education Meet. All rights reserved.</p>
     </footer>
 </body>
 </html>
